<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AudioListFragment">

    <include
        android:id="@+id/appBarFragment"
        layout="@layout/fragment_app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchEdtLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_marginHorizontal="@dimen/xx_sm"
        android:layout_marginTop="@dimen/xx_sm"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintTop_toBottomOf="@id/appBarFragment"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEdt"
            style="@style/EdtStyle"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/closeSearchLayout"
        android:layout_width="@dimen/x_md"
        android:layout_height="@dimen/x_md"
        android:layout_marginEnd="@dimen/xx_sm"
        android:background="@drawable/button_bg"
        android:src="@drawable/close_ic"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/searchEdtLayout"
        app:layout_constraintEnd_toEndOf="@id/searchEdtLayout"
        app:layout_constraintTop_toTopOf="@id/searchEdtLayout" />

    <TextView
        android:id="@+id/noDataTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md"
        android:text="@string/no_data"
        android:textColor="@color/black"
        android:textSize="@dimen/x_md_txt"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/searchEdtLayout"
        app:layout_constraintStart_toStartOf="@id/searchEdtLayout"
        app:layout_constraintTop_toBottomOf="@id/searchEdtLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/md"
        android:layout_height="@dimen/md"
        android:layout_marginTop="@dimen/md"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/noDataTxt"
        app:layout_constraintStart_toStartOf="@id/noDataTxt"
        app:layout_constraintTop_toBottomOf="@id/noDataTxt"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/audiosRcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="@dimen/x_sm"
        app:layout_constraintBottom_toTopOf="@id/audioControlLayout"
        app:layout_constraintTop_toBottomOf="@id/searchEdtLayout"
        tools:listitem="@layout/audio_item_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/audioControlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/controls_wrapper_background"
        android:paddingHorizontal="@dimen/md"
        android:paddingVertical="@dimen/x_sm"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/currentAudioTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x_sm"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/audio_title"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/x_md_txt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/previousIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/previousIcon"
            android:layout_width="@dimen/lg"
            android:layout_height="@dimen/lg"
            android:contentDescription="@string/app_name"
            android:src="@drawable/skip_previous_ic"
            app:layout_constraintBottom_toBottomOf="@id/currentAudioTitle"
            app:layout_constraintEnd_toStartOf="@id/playOrPauseIcon"
            app:layout_constraintStart_toEndOf="@id/currentAudioTitle"
            app:layout_constraintTop_toTopOf="@id/currentAudioTitle"
            app:tint="@color/primaryColor" />

        <ImageView
            android:id="@+id/playOrPauseIcon"
            android:layout_width="@dimen/lg"
            android:layout_height="@dimen/lg"
            android:contentDescription="@string/play_icon"
            android:src="@drawable/play_circle_blue_outline_ic"
            app:layout_constraintBottom_toBottomOf="@id/previousIcon"
            app:layout_constraintEnd_toStartOf="@id/nextIcon"
            app:layout_constraintStart_toEndOf="@id/previousIcon"
            app:layout_constraintTop_toTopOf="@id/previousIcon"
            app:tint="@color/primaryColor" />

        <ImageView
            android:id="@+id/nextIcon"
            android:layout_width="@dimen/lg"
            android:layout_height="@dimen/lg"
            android:contentDescription="@string/app_name"
            android:src="@drawable/skip_next_ic"
            app:layout_constraintBottom_toBottomOf="@id/previousIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/playOrPauseIcon"
            app:layout_constraintTop_toTopOf="@id/previousIcon"
            app:tint="@color/primaryColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/fragmentAudioDetailsLayout"
        layout="@layout/fragment_audio_details" />
</androidx.constraintlayout.widget.ConstraintLayout>